--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
-    <meta name="author" content="Hcode Treinamentos">
+    <meta name="author" content="Matheus Eduardo">
 
     <title>DropBox Clone</title>
 
@@ -97,7 +97,7 @@
                             <span role="button" tabindex="0" aria-haspopup="true" aria-expanded="false" class="maestro-nav-switcher-button" data-reactid="48">
                                 <div class="maestro-nav-switcher-button__content" data-reactid="49">
                                     <div class="maestro-nav-switcher-button__info" data-reactid="50">
-                                        <div class="maestro-nav-switcher-button__title" data-reactid="51">HCODE</div>
+                                        <div class="maestro-nav-switcher-button__title" data-reactid="51">Matheus Eduardo</div>
                                         <div class="maestro-nav-switcher-button__label" data-reactid="52">3 membros</div>
                                     </div>
                                     <svg class="maestro-nav-switcher-button__icon" viewBox="0 0 24 24" data-reactid="53">
@@ -131,7 +131,7 @@
                                     <nav class="page-header-text u-l-fl" id="browse-location" aria-label="Hierarquia de pastas" role="navigation">
                                         <span class="breadcrumb-segment__wrapper">
                                             <span class="ue-effect-container uee-BreadCrumbSegment-link-0">
-                                                <a href="https://www.dropbox.com/work" class="breadcrumb-segment">HCODE</a>
+                                                <a href="https://www.dropbox.com/work" class="breadcrumb-segment">Matheus Eduardo</a>
                                             </span>
                                             <svg width="24" height="24" viewBox="0 0 24 24" class="mc-icon-template-stateless" style="top: 4px; position: relative;">
                                                 <title>arrow-right</title>
@@ -339,7 +339,7 @@
                         </div>
                         <div class="col-md-3">
                             <button id="btn-send-file" type="button" class="btn btn-primary btn-block btn-sm">Enviar arquivos</button>
-                            <input type="file" id="files" style="display:none;">
+                            <input type="file" id="files" style="display:none;" multiple>
                             <button id="btn-new-folder" type="button" class="btn btn-link btn-block btn-sm btn-icon"><i class="ion-android-folder-open"></i>Nova Pasta</button>
                             <button id="btn-rename" type="button" class="btn btn-link btn-block btn-sm btn-icon"><i class="ion-edit"></i>Renomear</button>
                             <button id="btn-delete" type="button" class="btn btn-link btn-block btn-sm btn-icon"><i class="ion-trash-a"></i>Excluir</button>
@@ -370,6 +370,10 @@
             </div>
         </div>
     </div>
+
+    <script src="src/controller/DropBoxController.js"></script>
+    <script src="src/index.js"></script>
+
 
 </body>
 
